--- a/Slutprojekt expriment/index.html
+++ b/Slutprojekt expriment/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-<main>  
+    <main>
       <div class="header">
         <img src="/img/logo-zello.jpg" alt="" />
       </div>
@@ -27,57 +27,189 @@
           <li><a href="/info.html">INFO</a></li>
         </ul>
       </nav>
-<div class="container">
-  <div class="left">
-    <div class="family-img">
-    <a href="/under-pages/family.html">
-      <img alt="family" src="/img/father-son.jpg" />
-    </a>
-    </div>
-    <div class="friends-img">
-    <a href="/under-pages/friends.html">
-      <img alt="friends" src="img/friends.jpg" />
-    </a>
-    </div>
-    <div class="futsal-img">
-    <a href="/under-pages/futsal.html">
-      <img alt="futsal" src="img/futsal.jpg" />
-    </a>
-    </div>
-    <div class="travel-img">
-    <a href="/under-pages/travel.html">
-      <img alt="travel" src="img/travel.jpg" />
-    </a>
-    </div>
-    <div class="gaming-img">
-    <a href="/under-pages/gaming.html">
-      <img alt="gaming" src="img/gaming.jpg" />
-    </a>
-    </div>
-  </div>
 
-  <div class="right">
-<div class="family-p">
-<p>family</p>
-  </div>
-  <div class="friends-p">
-<p>friends</p>
-  </div>
-  <div class="futsal-p">
-<p>futsal</p>
-  </div>
-  <div class="travel-p">
-<p>travel</p>
-  </div>
-  <div class="gaming-p">
-<p>gaming</p>
-  </div>
+      <div class="container">
+        <div class="family-img">
+          <a href="/under-pages/family.html">
+            <img alt="family" src="/img/father-son.jpg" />
+          </a>
+        </div>
+        <div class="friends-img">
+          <a href="/under-pages/friends.html">
+            <img alt="friends" src="img/friends.jpg" />
+          </a>
+        </div>
+        <div class="futsal-img">
+          <a href="/under-pages/futsal.html">
+            <img alt="futsal" src="img/futsal.jpg" />
+          </a>
+        </div>
+        <div class="travel-img">
+          <a href="/under-pages/travel.html">
+            <img alt="travel" src="img/travel.jpg" />
+          </a>
+        </div>
+        <div class="gaming-img">
+          <a href="/under-pages/gaming.html">
+            <img alt="gaming" src="img/gaming.jpg" />
+          </a>
+        </div>
 
-</div>
+        <div class="family-p">
+          <h3>FAMILY</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+            modi nostrum quaerat ipsam ut minus nobis alias. Impedit porro atque
+            repellendus ex veniam. Quaerat recusandae fuga voluptatem accusamus
+            sit quisquam dignissimos vero porro cumque laudantium minus nemo,
+            maiores, doloribus dicta enim voluptates unde minima totam, esse
+            sapiente. Sapiente quasi ut suscipit temporibus praesentium
+            veritatis error eveniet harum fugit nobis. Molestias, libero? Nemo,
+            facilis. Quisquam dolore impedit necessitatibus, molestiae dolor
+            laboriosam tenetur quidem nihil officiis facere eligendi voluptas
+            nulla sed, laudantium sequi saepe ad architecto eos at odio illum.
+            Eaque quam distinctio, rem facilis a magnam aliquam! Minima,
+            inventore unde laudantium tenetur consectetur veritatis aliquid!
+            Illum voluptates eveniet laboriosam nostrum deleniti quia totam
+            temporibus. Unde reiciendis et atque voluptatum molestias, ea
+            reprehenderit doloribus libero molestiae repellendus cumque
+            laudantium voluptas voluptate id similique tempore hic sequi autem
+            eveniet consequuntur aliquam obcaecati exercitationem placeat!
+            Blanditiis autem rem, amet quo libero quibusdam soluta, repudiandae
+            nisi tempora atque esse. Sunt est ullam fuga molestiae vel quas
+            tempore, vitae, illum consectetur quisquam tempora accusamus
+            asperiores accusantium sapiente possimus minus dolores quibusdam
+            nemo inventore at rem. Vitae, consequatur. Recusandae qui numquam
+            distinctio sequi quam! Vitae sit voluptate corporis nihil! Dolorum
+            officia animi laborum alias modi architecto quod!
+          </p>
+        </div>
+
+        <div class="friends-p">
+          <h3>FRIENDS</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+            modi nostrum quaerat ipsam ut minus nobis alias. Impedit porro atque
+            repellendus ex veniam. Quaerat recusandae fuga voluptatem accusamus
+            sit quisquam dignissimos vero porro cumque laudantium minus nemo,
+            maiores, doloribus dicta enim voluptates unde minima totam, esse
+            sapiente. Sapiente quasi ut suscipit temporibus praesentium
+            veritatis error eveniet harum fugit nobis. Molestias, libero? Nemo,
+            facilis. Quisquam dolore impedit necessitatibus, molestiae dolor
+            laboriosam tenetur quidem nihil officiis facere eligendi voluptas
+            nulla sed, laudantium sequi saepe ad architecto eos at odio illum.
+            Eaque quam distinctio, rem facilis a magnam aliquam! Minima,
+            inventore unde laudantium tenetur consectetur veritatis aliquid!
+            Illum voluptates eveniet laboriosam nostrum deleniti quia totam
+            temporibus. Unde reiciendis et atque voluptatum molestias, ea
+            reprehenderit doloribus libero molestiae repellendus cumque
+            laudantium voluptas voluptate id similique tempore hic sequi autem
+            eveniet consequuntur aliquam obcaecati exercitationem placeat!
+            Blanditiis autem rem, amet quo libero quibusdam soluta, repudiandae
+            nisi tempora atque esse. Sunt est ullam fuga molestiae vel quas
+            tempore, vitae, illum consectetur quisquam tempora accusamus
+            asperiores accusantium sapiente possimus minus dolores quibusdam
+            nemo inventore at rem. Vitae, consequatur. Recusandae qui numquam
+            distinctio sequi quam! Vitae sit voluptate corporis nihil! Dolorum
+            officia animi laborum alias modi architecto quod!
+          </p>
+        </div>
+
+        <div class="futsal-p">
+          <h3>FUTSAL</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+            modi nostrum quaerat ipsam ut minus nobis alias. Impedit porro atque
+            repellendus ex veniam. Quaerat recusandae fuga voluptatem accusamus
+            sit quisquam dignissimos vero porro cumque laudantium minus nemo,
+            maiores, doloribus dicta enim voluptates unde minima totam, esse
+            sapiente. Sapiente quasi ut suscipit temporibus praesentium
+            veritatis error eveniet harum fugit nobis. Molestias, libero? Nemo,
+            facilis. Quisquam dolore impedit necessitatibus, molestiae dolor
+            laboriosam tenetur quidem nihil officiis facere eligendi voluptas
+            nulla sed, laudantium sequi saepe ad architecto eos at odio illum.
+            Eaque quam distinctio, rem facilis a magnam aliquam! Minima,
+            inventore unde laudantium tenetur consectetur veritatis aliquid!
+            Illum voluptates eveniet laboriosam nostrum deleniti quia totam
+            temporibus. Unde reiciendis et atque voluptatum molestias, ea
+            reprehenderit doloribus libero molestiae repellendus cumque
+            laudantium voluptas voluptate id similique tempore hic sequi autem
+            eveniet consequuntur aliquam obcaecati exercitationem placeat!
+            Blanditiis autem rem, amet quo libero quibusdam soluta, repudiandae
+            nisi tempora atque esse. Sunt est ullam fuga molestiae vel quas
+            tempore, vitae, illum consectetur quisquam tempora accusamus
+            asperiores accusantium sapiente possimus minus dolores quibusdam
+            nemo inventore at rem. Vitae, consequatur. Recusandae qui numquam
+            distinctio sequi quam! Vitae sit voluptate corporis nihil! Dolorum
+            officia animi laborum alias modi architecto quod!
+          </p>
+        </div>
+
+        <div class="travel-p">
+          <h3>TRAVEL</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+            modi nostrum quaerat ipsam ut minus nobis alias. Impedit porro atque
+            repellendus ex veniam. Quaerat recusandae fuga voluptatem accusamus
+            sit quisquam dignissimos vero porro cumque laudantium minus nemo,
+            maiores, doloribus dicta enim voluptates unde minima totam, esse
+            sapiente. Sapiente quasi ut suscipit temporibus praesentium
+            veritatis error eveniet harum fugit nobis. Molestias, libero? Nemo,
+            facilis. Quisquam dolore impedit necessitatibus, molestiae dolor
+            laboriosam tenetur quidem nihil officiis facere eligendi voluptas
+            nulla sed, laudantium sequi saepe ad architecto eos at odio illum.
+            Eaque quam distinctio, rem facilis a magnam aliquam! Minima,
+            inventore unde laudantium tenetur consectetur veritatis aliquid!
+            Illum voluptates eveniet laboriosam nostrum deleniti quia totam
+            temporibus. Unde reiciendis et atque voluptatum molestias, ea
+            reprehenderit doloribus libero molestiae repellendus cumque
+            laudantium voluptas voluptate id similique tempore hic sequi autem
+            eveniet consequuntur aliquam obcaecati exercitationem placeat!
+            Blanditiis autem rem, amet quo libero quibusdam soluta, repudiandae
+            nisi tempora atque esse. Sunt est ullam fuga molestiae vel quas
+            tempore, vitae, illum consectetur quisquam tempora accusamus
+            asperiores accusantium sapiente possimus minus dolores quibusdam
+            nemo inventore at rem. Vitae, consequatur. Recusandae qui numquam
+            distinctio sequi quam! Vitae sit voluptate corporis nihil! Dolorum
+            officia animi laborum alias modi architecto quod!
+          </p>
+        </div>
+
+        <div class="gaming-p">
+          <h3>GAMING</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+            modi nostrum quaerat ipsam ut minus nobis alias. Impedit porro atque
+            repellendus ex veniam. Quaerat recusandae fuga voluptatem accusamus
+            sit quisquam dignissimos vero porro cumque laudantium minus nemo,
+            maiores, doloribus dicta enim voluptates unde minima totam, esse
+            sapiente. Sapiente quasi ut suscipit temporibus praesentium
+            veritatis error eveniet harum fugit nobis. Molestias, libero? Nemo,
+            facilis. Quisquam dolore impedit necessitatibus, molestiae dolor
+            laboriosam tenetur quidem nihil officiis facere eligendi voluptas
+            nulla sed, laudantium sequi saepe ad architecto eos at odio illum.
+            Eaque quam distinctio, rem facilis a magnam aliquam! Minima,
+            inventore unde laudantium tenetur consectetur veritatis aliquid!
+            Illum voluptates eveniet laboriosam nostrum deleniti quia totam
+            temporibus. Unde reiciendis et atque voluptatum molestias, ea
+            reprehenderit doloribus libero molestiae repellendus cumque
+            laudantium voluptas voluptate id similique tempore hic sequi autem
+            eveniet consequuntur aliquam obcaecati exercitationem placeat!
+            Blanditiis autem rem, amet quo libero quibusdam soluta, repudiandae
+            nisi tempora atque esse. Sunt est ullam fuga molestiae vel quas
+            tempore, vitae, illum consectetur quisquam tempora accusamus
+            asperiores accusantium sapiente possimus minus dolores quibusdam
+            nemo inventore at rem. Vitae, consequatur. Recusandae qui numquam
+            distinctio sequi quam! Vitae sit voluptate corporis nihil! Dolorum
+            officia animi laborum alias modi architecto quod!
+          </p>
+        </div>
+      </div>
 
       <!-- <footer>
         <p>This is a footer.</p>
-      </footer> -->
-  </main> 
+      </footer>
+       -->
+    </main>
   </body>
 </html>
