--- a/Slutprojekt expriment/kontakt.html
+++ b/Slutprojekt expriment/kontakt.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <main>
       <div class="header">
         <img src="/img/logo-zello.jpg" alt="" />
       </div>
@@ -34,7 +34,7 @@
 
       <div class="split-left">
         <!-- <h1>KONTAKT</h1> -->
-        <div class="box-form">
+        <!-- <div class="box-form">
           <form action="/action_page.php">
             <label for="fnamn">Förnamn:</label>
             <input
@@ -62,7 +62,7 @@
             <br>
             <input type="submit" value="Skicka" />
           </form>
-        </div>
+        </div> -->
       </div>
 
 
@@ -70,5 +70,6 @@
         <p>This is a footer.</p>
       </footer>
     </div>
+  </main>
   </body>
 </html>
