--- a/Slutprojekt expriment/index.html
+++ b/Slutprojekt expriment/index.html
@@ -28,7 +28,7 @@
         </ul>
       </nav>
 
-      <div class="container">
+      <div class="container-index">
         <div class="family-img">
           <a href="/under-pages/family.html">
             <img alt="family" src="/img/father-son.jpg" />
@@ -206,10 +206,10 @@
         </div>
       </div>
 
-      <!-- <footer>
+      <footer>
         <p>This is a footer.</p>
       </footer>
-       -->
+      
     </main>
   </body>
 </html>
