--- a/Slutprojekt expriment/kontakt.html
+++ b/Slutprojekt expriment/kontakt.html
@@ -27,14 +27,13 @@
           <li><a href="/info.html">INFO</a></li>
         </ul>
       </nav>
+      <div class="container-kontakt">
+        <div class="right">
+          <img src="/img/contact-me.jpg" alt="contact me" />
+        </div>
 
-      <div class="split-right">
-        <img src="/img/contact-me.jpg" alt="contact me" />
-      </div>
-
-      <div class="split-left">
-        <!-- <h1>KONTAKT</h1> -->
-        <!-- <div class="box-form">
+        <div class="box-form">
+          <h1>KONTAKT</h1>
           <form action="/action_page.php">
             <label for="fnamn">Förnamn:</label>
             <input
@@ -43,7 +42,7 @@
               name="förnamn"
               placeholder="Ditt förnamn"
             />
-            <br>
+            <br />
             <label for="lname">Efternamn:</label>
             <input
               type="text"
@@ -51,7 +50,7 @@
               name="efternamn"
               placeholder="Ditt efternamn"
             />
-            
+
             <label for="subject">Fråga något:</label>
             <textarea
               id="subject"
@@ -59,17 +58,15 @@
               placeholder="Skriv här.."
               style="height: 300px"
             ></textarea>
-            <br>
+            <br />
             <input type="submit" value="Skicka" />
           </form>
-        </div> -->
+        </div>
       </div>
-
 
       <footer>
         <p>This is a footer.</p>
       </footer>
-    </div>
-  </main>
+    </main>
   </body>
 </html>
