--- a/Slutprojekt expriment/under-pages/family.html
+++ b/Slutprojekt expriment/under-pages/family.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/css/style.css" />  
   </head>
 
-  <body>
+  <!-- <body>
     <div class="container">
       <div class="header">
         <img src="/img/logo-zello.jpg" alt="" />
@@ -44,4 +44,37 @@
       </footer>
     </div>
   </body>
+</html> -->
+<body>
+  <main>
+    <div class="header">
+      <img src="/img/logo-zello.jpg" alt="" />
+    </div>
+
+    <nav>
+      <ul>
+        <li><a href="/index.html">START</a></li>
+        <li><a href="/kontakt.html">KONTAKT</a></li>
+        <li><a href="/info.html">INFO</a></li>
+      </ul>
+    </nav>
+
+    <div class="container-underpage">
+      <div class="right-underpage">
+        <video autoplay loop muted>
+          <source src="/videos/family-walking.mp4">
+      </div>
+    
+            <div class="left-underpage">
+              <h1>INFO</h1>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis perspiciatis excepturi, est aperiam maxime illum voluptate sit incidunt, consequuntur laboriosam officia officiis, sed consequatur accusantium optio reiciendis ratione dolorem exercitationem repellendus assumenda delectus eaque rerum et! Fugit consectetur magni, soluta tempore iusto praesentium. Corporis rerum voluptatibus, laboriosam possimus libero pariatur architecto eligendi dolore quae voluptatem explicabo odio assumenda doloribus? Ab ex veniam culpa itaque. Mollitia vero officiis sed ea, beatae magni quis corporis corrupti? Dicta illum laudantium placeat, odio delectus ipsam illo sed quam alias eius natus vero nisi, quidem voluptas, quo minus officiis iste consequatur itaque qui quasi repellendus! Provident, quasi cum. Assumenda eaque dignissimos eum rerum hic quis quae tempora officia cum numquam voluptatibus inventore esse, quaerat nulla placeat aut pariatur iusto sit perferendis sed adipisci harum delectus? Porro ipsa reiciendis dignissimos distinctio culpa consequatur saepe rerum sed doloremque maxime atque voluptatem cum quidem recusandae temporibus laudantium mollitia, sint, adipisci, voluptas consequuntur quo pariatur. Sapiente velit, ut aliquam assumenda at adipisci aperiam nemo enim quia natus unde iusto ipsam eum perspiciatis. Soluta iusto optio nihil doloribus modi eos unde repellat accusamus! A esse odit omnis qui pariatur aliquid. Laboriosam doloribus quaerat saepe nisi esse facere error unde fugit? numquam voluptatibus inventore esse, quaerat nulla placeat aut pariatur iusto sit perferendis sed adipisci harum delectus? Porro ipsa reiciendis dignissimos distinctio culpa consequatur saepe rerum sed doloremque maxime atque voluptatem cum quidem recusandae temporibus laudantium mollitia, sint, adipisci, voluptas consequuntur quo pariatur. Sapiente velit, ut aliquam assumenda at adipisci aperiam nemo enim quia natus unde iusto ipsam eum perspiciatis. Soluta iusto optio nihil doloribus modi eos unde repellat accusamus! A esse odit omnis qui pariatur aliquid. Laboriosam doloribus quaerat saepe nisi esse facere error unde fugit?consequatur saepe rerum sed doloremque maxime atque voluptatem cum quidem recusandae temporibus laudantium mollitia, sint, adipisci, voluptas consequuntur quo pariatur. Sapiente velit, ut aliquam assumenda at adipisci aperiam nemo enim quia natus unde iusto ipsam eum perspiciatis. Soluta iusto optio nihil doloribus modi eos unde repellat accusamus! A esse odit omnis qui pariatur aliquid. Laboriosam doloribus quaerat saepe nisi esse facere error unde fugit? numquam voluptatibus inventore esse, quaerat nulla placeat aut pariatur iusto sit perferendis sed adipisci harum delectus? Porro ipsa reiciendis dignissimos distinctio culpa consequatur saepe rerum sed doloremque maxime atque voluptatem cum quidem recusandae temporibus laudantium mollitia, sint, adipisci, voluptas consequuntur quo pariatur. Sapiente velit, ut aliquam assumenda at adipisci aperiam nemo enim quia natus unde iusto ipsam eum perspiciatis. Soluta iusto optio nihil doloribus modi eos unde repellat accusamus! A esse odit omnis qui pariatur aliquid. Laboriosam doloribus quaerat saepe nisi esse facere error unde fugit?</p>
+            </div>
+          </div>
+
+      <footer>
+      <p>This is a footer.</p>
+      </footer>
+  </div>
+</body>
 </html>
+
