--- a/Slutprojekt expriment/info.html
+++ b/Slutprojekt expriment/info.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <main>
       <div class="header">
         <img src="/img/logo-zello.jpg" alt="" />
       </div>
@@ -28,68 +28,20 @@
         </ul>
       </nav>
 
-      <div class="split-left">
-        <h1>JAG</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis,
-          natus dolores sapiente blanditiis eum itaque maiores repudiandae
-          impedit aperiam, hic reprehenderit exercitationem! Iure cupiditate
-          perspiciatis blanditiis a. Possimus fugiat temporibus voluptatum
-          mollitia magnam perferendis labore expedita necessitatibus quis. Quasi
-          in placeat ea ut eligendi omnis mollitia, sint velit quia? Dolores,
-          maiores deserunt! Consectetur numquam quidem tempora neque eum sint
-          enim eos illum at dignissimos necessitatibus accusantium expedita
-          optio ex nemo voluptate, minus deserunt. Tempora, commodi esse. Rem a
-          earum quos dolorum minus deleniti iste et repudiandae eaque dolorem in
-          inventore, at sunt error porro officia minima voluptates culpa odit
-          explicabo sed magni voluptas ducimus! Voluptatem ab blanditiis,
-          praesentium rem sequi, adipisci sint reiciendis error labore
-          dignissimos officiis! Vero animi illo repellat voluptate porro nam
-          totam eius dicta accusamus molestiae officia veritatis, excepturi
-          ullam ipsum aperiam quis incidunt laudantium minima fuga delectus
-          quidem laborum. Voluptatibus qui debitis, esse eligendi ab dolorum.
-          Fugiat, earum consequatur ad tempore temporibus sit eaque dolores
-          rerum mollitia voluptatum accusantium, optio totam dignissimos magnam,
-          iusto excepturi maxime nostrum aut commodi exercitationem? Ducimus
-          dignissimos, obcaecati odit quibusdam est sapiente eaque, magni culpa,
-          ex quis recusandae voluptatum praesentium non. Soluta dolore placeat
-          iure quod assumenda magnam tenetur odio quae. minima voluptates culpa
-          odit explicabo sed magni voluptas ducimus! Voluptatem ab blanditiis,
-          praesentium rem sequi, adipisci sint reiciendis error labore
-          dignissimos officiis! Vero animi illo repellat voluptate porro nam
-          totam eius dicta accusamus molestiae officia veritatis, excepturi
-          ullam ipsum aperiam quis incidunt laudantium minima fuga delectus
-          quidem laborum. Voluptatibus qui debitis, esse eligendi ab dolorum.
-          Fugiat, earum consequatur ad tempore temporibus sit eaque dolores
-          rerum mollitia voluptatum accusantium, optio totam dignissimos magnam,
-          iusto excepturi maxime nostrum aut commodi exercitationem? Ducimus
-          dignissimos, obcaecati odit quibusdam est sapiente eaque, magni culpa,
-          ex quis recusandae voluptatum praesentium non. Soluta dolore placeat
-          iure quod assumenda magnam tenetur odio quae.minima voluptates culpa
-          odit explicabo sed magni voluptas ducimus! Voluptatem ab blanditiis,
-          praesentium rem sequi, adipisci sint reiciendis error labore
-          dignissimos officiis! Vero animi illo repellat voluptate porro nam
-          totam eius dicta accusamus molestiae officia veritatis, excepturi
-          ullam ipsum aperiam quis incidunt laudantium minima fuga delectus
-          quidem laborum. Voluptatibus qui debitis, esse eligendi ab dolorum.
-          Fugiat, earum consequatur ad tempore temporibus sit eaque dolores
-          rerum mollitia voluptatum accusantium, optio totam dignissimos magnam,
-          iusto excepturi maxime nostrum aut commodi exercitationem? Ducimus
-          dignissimos, obcaecati odit quibusdam est sapiente eaque, magni culpa,
-          ex quis recusandae voluptatum praesentium non. Soluta dolore placeat
-          iure quod assumenda magnam tenetur odio quae.
-        </p>
-      </div>
-
-      <div class="split-right">
-        <div class="img-info">
-          <img src="/img/ismail-futsal.jpeg" alt="" />
+      <div class="container-info">
+        <div class="right-info">
+          <img src="/img/ismail-futsal.jpeg" alt="contact me" />
         </div>
-      </div>
+      
+              <div class="left-info">
+                <h1>INFO</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis perspiciatis excepturi, est aperiam maxime illum voluptate sit incidunt, consequuntur laboriosam officia officiis, sed consequatur accusantium optio reiciendis ratione dolorem exercitationem repellendus assumenda delectus eaque rerum et! Fugit consectetur magni, soluta tempore iusto praesentium. Corporis rerum voluptatibus, laboriosam possimus libero pariatur architecto eligendi dolore quae voluptatem explicabo odio assumenda doloribus? Ab ex veniam culpa itaque. Mollitia vero officiis sed ea, beatae magni quis corporis corrupti? Dicta illum laudantium placeat, odio delectus ipsam illo sed quam alias eius natus vero nisi, quidem voluptas, quo minus officiis iste consequatur itaque qui quasi repellendus! Provident, quasi cum. Assumenda eaque dignissimos eum rerum hic quis quae tempora officia cum numquam voluptatibus inventore esse, quaerat nulla placeat aut pariatur iusto sit perferendis sed adipisci harum delectus? Porro ipsa reiciendis dignissimos distinctio culpa consequatur saepe rerum sed doloremque maxime atque voluptatem cum quidem recusandae temporibus laudantium mollitia, sint, adipisci, voluptas consequuntur quo pariatur. Sapiente velit, ut aliquam assumenda at adipisci aperiam nemo enim quia natus unde iusto ipsam eum perspiciatis. Soluta iusto optio nihil doloribus modi eos unde repellat accusamus! A esse odit omnis qui pariatur aliquid. Laboriosam doloribus quaerat saepe nisi esse facere error unde fugit? numquam voluptatibus inventore esse, quaerat nulla placeat aut pariatur iusto sit perferendis sed adipisci harum delectus? Porro ipsa reiciendis dignissimos distinctio culpa consequatur saepe rerum sed doloremque maxime atque voluptatem cum quidem recusandae temporibus laudantium mollitia, sint, adipisci, voluptas consequuntur quo pariatur. Sapiente velit, ut aliquam assumenda at adipisci aperiam nemo enim quia natus unde iusto ipsam eum perspiciatis. Soluta iusto optio nihil doloribus modi eos unde repellat accusamus! A esse odit omnis qui pariatur aliquid. Laboriosam doloribus quaerat saepe nisi esse facere error unde fugit?consequatur saepe rerum sed doloremque maxime atque voluptatem cum quidem recusandae temporibus laudantium mollitia, sint, adipisci, voluptas consequuntur quo pariatur. Sapiente velit, ut aliquam assumenda at adipisci aperiam nemo enim quia natus unde iusto ipsam eum perspiciatis. Soluta iusto optio nihil doloribus modi eos unde repellat accusamus! A esse odit omnis qui pariatur aliquid. Laboriosam doloribus quaerat saepe nisi esse facere error unde fugit? numquam voluptatibus inventore esse, quaerat nulla placeat aut pariatur iusto sit perferendis sed adipisci harum delectus? Porro ipsa reiciendis dignissimos distinctio culpa consequatur saepe rerum sed doloremque maxime atque voluptatem cum quidem recusandae temporibus laudantium mollitia, sint, adipisci, voluptas consequuntur quo pariatur. Sapiente velit, ut aliquam assumenda at adipisci aperiam nemo enim quia natus unde iusto ipsam eum perspiciatis. Soluta iusto optio nihil doloribus modi eos unde repellat accusamus! A esse odit omnis qui pariatur aliquid. Laboriosam doloribus quaerat saepe nisi esse facere error unde fugit?</p>
+              </div>
+            </div>
 
-      <footer>
+        <footer>
         <p>This is a footer.</p>
-      </footer>
+        </footer>
     </div>
   </body>
 </html>
